--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      <head></head>
 <body>
     <h1>TENORIO,JUSTINE </h1>
-    <H4>Back-end Developer</H4>
-    <nav>View Portfolio</nav>
+    <H4>FS</H4>
+    <button>View Portfolio</button>
     
 <nav>
      <a href="/Home/">Home</a>
-     <a href="/Skills/">Skills</a>
+     <a href="/Favorites/">Favorites</a>
      <a href="/Works">Works</a>
      <a href="Content">Content</a>
      <a href="About">About</a>
@@ -23,10 +23,8 @@
 
 </nav>
 
-    <h1>Skills</h1>
-  
-
-
+    <h1>Favorites</h1>
+  <h5></h5>
 
 </body>
 </html>
